# 24project

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/: gold.json
mcp-ems/: package-lock.json  package.json  readme.md  tsconfig.json
mcp-ems/src/: index.ts  tools.ts  util.ts
scripts/: format.ps1  ingest_coding_guidelines.py  ingest_denial.py  lint.ps1  synthesize_payer_rules.py  test.ps1
src/ems_pipeline/: __init__.py  __main__.py  cli.py  context_utils.py  extract.py  io_utils.py  models.py  normalize.py  orchestrator.py  session.py  transcribe.py
src/ems_pipeline/agents/: __init__.py  agent1.py  agent2.py  agent3.py  agent4.py
src/ems_pipeline/audio/: __init__.py  filters.py  preprocess.py
src/ems_pipeline/claim/: __init__.py  builder.py  canonical.py  (+2 more)
tests/: conftest.py  test_agent1.py  test_agent2.py  test_agent3.py  test_agent4.py  test_appeal_precedents.py  test_asr_whisper_formatting.py  test_asr_whisper_integration.py  test_audio_filters.py  test_audio_preprocess.py  test_canonical_claim.py  test_canonical_enrich.py  test_claim_builder.py  test_coding_guidelines.py  test_context.py  test_context_utils.py  test_diarize.py  test_eval_metrics.py  test_exporters.py  test_extract.py  test_llm_extractor.py  test_models_roundtrip.py  test_normalize.py  test_orchestrator.py  test_payer_rules.py  test_session.py  test_timeline_events.py  test_transcribe.py
tests/fixtures/: canonical_claim_sample.json  coverage_report_sample.json  fhir_export_sample.json  nemsis_export_sample.json  x12_837_export_sample.json
(+22 files in other folders)
